--- a/ProjectFiles/PharmacyManagement/src/javaapplication/login.form
+++ b/ProjectFiles/PharmacyManagement/src/javaapplication/login.form
@@ -85,6 +85,7 @@
         <Property name="text" type="java.lang.String" value="Log in"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseExited"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
