Addition of medicine,doctor,company working successfully

--- a/ProjectFiles/PharmacyManagement/src/javaapplication/home.form
+++ b/ProjectFiles/PharmacyManagement/src/javaapplication/home.form
@@ -140,6 +140,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Doctor"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AddDoctorActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="150" width="140" height="20"/>
@@ -150,6 +153,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Company"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AddCompanyActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="170" width="140" height="20"/>
