"login as" mentioned in login page

--- a/ProjectFiles/PharmacyManagement/src/javaapplication/Signup.form
+++ b/ProjectFiles/PharmacyManagement/src/javaapplication/Signup.form
@@ -196,11 +196,14 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
             <StringItem index="0" value="[--Select--]"/>
-            <StringItem index="1" value="admin"/>
-            <StringItem index="2" value="pharmacist"/>
+            <StringItem index="1" value="pharmacist"/>
+            <StringItem index="2" value="admin"/>
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roletextActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="233" y="270" width="-1" height="-1"/>
